fix tests for delete comment miw-upm/goa#62